<resources>
    <string name="app_name">ISDMessenger</string>

    <string name="signin_tv"><u> Sign In</u></string>
    <string name="sign_up_tv"><u>Sign Up</u></string>
    <string name="title_home">Home</string>
    <string name="title_dash_board">Dash Board</string>
    <string name="title_profile">Profile</string>
    <string name="chat_fragment">Chat Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="send_message">Send Message</string>
    <string name="user_status">User Status</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="message_here">Message Here....</string>
    <string name="last_seen">Last Seen</string>
</resources>
