<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/visitProfileCivId"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:padding="4dp"
        android:src="@drawable/ic_person_24dp" />

    <TextView
        android:id="@+id/visitProfileNameTvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visitProfileCivId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/user_name"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/visitProfileStatusTvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visitProfileNameTvId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/user_status"
        android:textSize="30sp" />

    <Button
        android:id="@+id/visitProfileSendMessageRequestBtnId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visitProfileStatusTvId"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFA000"
        android:text="@string/send_message"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/visitProfileDeclineRequestBtnId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visitProfileSendMessageRequestBtnId"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="#FFA000"
        android:text="@string/cancel_chat_request"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:visibility="invisible" />
</RelativeLayout>